# Orchids-Challenge

./: .gitignore  README.md
orchids-challenge/: README.md
orchids-challenge/backend/: README.md  main.py  pyproject.toml  requirements.txt
orchids-challenge/frontend/: README.md  next.config.ts  package-lock.json
orchids-challenge/frontend/src/app/: layout.tsx  page.tsx  types.ts
orchids-challenge/frontend/src/app/components/: ActionButtons.tsx  AnalysisAccordion.tsx  ComparisonView.tsx  DesignContextCard.tsx  DotsLoader.tsx  Header.tsx  InputCard.tsx  PreviewSection.tsx  Toast.tsx  analysisUtils.tsx
orchids-challenge/frontend/src/app/utils/: analysisUtils.tsx
