[project]
name = "website-cloner"
version = "2.0.0"
description = "AI-powered website cloning system with enhanced scraping and content variation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "beautifulsoup4>=4.9.3",
    "httpx>=0.24.0",
    "python-dotenv>=0.19.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "ratelimit>=2.2.1",
    "cachetools>=5.0.0",
    "aiohttp>=3.8.0",
    "python-multipart>=0.0.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"
